[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[project]
name = "export-ast"
authors = [{name = "Tom Draper", email = "tomjdraper1@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = []
description = "Export a Python AST to a dictionary."
keywords = ["ast", "abstract syntax trees", "dict", "export", "json"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
version = "1.0.2"

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["pytest"]

[project.urls]
repository = "https://github.com/tom-draper/export-ast"